explore page is improved
